# fencUpdate

./: Makefile  abe_policy.tab.c  config.h  config.status  configure.scan  libfenc.c  libfenc.h  libfenc_WatersCP.c  libfenc_WatersCP.h  libtool  tags
.deps/: abe_policy.tab.Plo  libfenc.Plo  libfenc_ABE_common.Plo  libfenc_LSSS.Plo  libfenc_LSW.Plo  libfenc_WatersCP.Plo  libfenc_WatersSimpleCP.Plo  libfenc_group_params.Plo  libfenc_utils.Plo  sha1.Plo
.libs/: libfenc.lai
.libs/libfenc.0.dylib.dSYM/Contents/: Info.plist
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
benchmark/: Makefile  benchmark
benchmark/.deps/: base64.Po  benchmark.Po  common.Po
benchmark/.libs/: benchmark
tools/: .mgabe-update.c.swp  Makefile  Makefile.am  Makefile.in  abe-dec  abe-enc  abe-keygen  abe-setup  abe-update  and.cpabe  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  data.cpabe  fz.cpabe  fz.key  fz_key  key.s  lalalala.cpabe  last.cpabe  mgabe-dec.c  mgabe-enc.c  mgabe-update.c  new.key  policy-test  private.key  public.param.cp  public.param.scp  secret.param.cp  secret.param.scp  test.cpabe  test.key  test1.cpabe  update.cpabe  xidian.cpabe  xidian.key
tools/.deps/: mgabe-dec.Po  mgabe-enc.Po  mgabe-keygen.Po  mgabe-setup.Po  mgabe-update.Po  policy-tool.Po
tools/.libs/: abe-dec  abe-enc  abe-keygen  abe-setup  abe-update  policy-test
tools/autom4te.cache/: output.1  requests  traces.0  traces.1
